<resources>
    <string name="app_name">Moon_News</string>
    <string name="first">开启我的旅程</string>
    <string name="open"></string>
    <string name="close"></string>
    <string name="news">news</string>
    <string name="find">redian</string>
    <string name="talk">chat</string>
    <string name="person">person</string>
    <string name="login">Login</string>
    <string name="man_name">请登录</string>
    <string name="qq"></string>
    <string name="setting">Setting</string>
    <string name="top">Top</string>
    <string name="Home">Home</string>
    <string name="Favoutites">Favourites</string>
    <string name="Color">Color</string>
    <string name="History">History</string>
    <string name="Shop">Shop</string>
    <string name="Top">Top</string>
    <string name="Wallet">Wallet</string>
    <string name="Message">Message</string>
    <string name="feedback">feedback</string>
    <string name="Night_Mode">Night_Mode</string>
    <string name="Off_line">Off_line</string>
    <string name="History_Read">History_Read</string>
    <string name="title_activity_login">Sign in</string>
    <string name="login_user">你的手机号</string>
    <string name="login_password">你的密码</string>
    <string name="register">Register</string>
    <string name="personal">个人中心</string>
    <string name="touxiang">picture</string>
    <string name="nicheng">Name</string>
    <string name="xingbie">sex</string>
    <string name="birthday">birthday</string>
    <string name="qianming">[sun]day</string>
    <string name="xueli">study</string>
    <string name="hangye">work</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

<!--图片的剪裁-->
    <string name="ucrop_label_original">原始比例</string>
    <string name="ucrop_label_edit_photo">裁剪</string>
    <string name="ucrop_menu_crop">裁剪</string>
    <string name="ucrop_error_input_data_is_absent">Both input and output Uri must be specified</string>

</resources>
