<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/man_Message"
            android:layout_height="36dp">

            <ImageView
                style="@style/DrawerButton"
                android:background="@mipmap/message" />

            <TextView
                style="@style/DrawerTextView"
                android:text="@string/Message" />

            <TextView style="@style/content_man_down_line" />

            <ImageView style="@style/content_man_down_forward" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/man_History"
            android:layout_height="36dp">

            <ImageView
                style="@style/DrawerButton"
                android:background="@mipmap/history01" />

            <TextView
                style="@style/DrawerTextView"
                android:text="@string/History_Read" />

            <TextView style="@style/content_man_down_line" />

            <ImageView style="@style/content_man_down_forward" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/man_OffLine"
            android:layout_height="36dp">

            <ImageView
                style="@style/DrawerButton"
                android:background="@mipmap/download" />

            <TextView
                style="@style/DrawerTextView"
                android:text="@string/Off_line" />

            <TextView style="@style/content_man_down_line" />

            <ImageView style="@style/content_man_down_forward" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="36dp">

            <ImageView
                style="@style/DrawerButton"
                android:background="@mipmap/moon01" />

            <TextView
                style="@style/DrawerTextView"
                android:text="@string/Night_Mode" />

            <TextView style="@style/content_man_down_line" />

            <ImageView style="@style/content_man_down_forward" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/man_setting"
            android:layout_height="36dp">

            <ImageView
                style="@style/DrawerButton"
                android:background="@mipmap/setting01" />

            <TextView
                style="@style/DrawerTextView"
                android:text="@string/setting" />

            <TextView style="@style/content_man_down_line" />

            <ImageView style="@style/content_man_down_forward" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/man_feedback"
            android:layout_height="36dp">

            <ImageView
                style="@style/DrawerButton"
                android:background="@mipmap/feedback" />

            <TextView
                style="@style/DrawerTextView"
                android:text="@string/feedback" />

            <TextView style="@style/content_man_down_line" />

            <ImageView style="@style/content_man_down_forward" />

        </RelativeLayout>

    </LinearLayout>
</ScrollView>