<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    tools:context="main.zzy.com.moon_news.Login_Activity">

          <ImageView
              android:id="@+id/login_touxiang"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@mipmap/touxiang_boy"
              android:layout_centerHorizontal="true"
              android:layout_marginTop="48dp"/>
       <android.support.v7.widget.AppCompatEditText
           android:id="@+id/Login_user"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           style="@style/LoginTextView"
           android:layout_below="@id/login_touxiang"
           android:layout_marginTop="16dp"
           android:hint="@string/login_user"
           />


       <android.support.v7.widget.AppCompatEditText
           android:id="@+id/login_password"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           style="@style/LoginTextView"
           android:layout_below="@id/Login_user"
           android:hint="@string/login_password"
           />
          <Button
              style="@style/Login_button"
              android:id="@+id/login_button"
              android:layout_below="@id/login_password"
              android:text="@string/login"
              android:alpha="0.8"
              android:elevation="16dp"
              />
    <Button
        android:id="@+id/Regist_button"
        style="@style/Login_button01"
        android:layout_below="@id/login_button"
        android:text="@string/register"
        android:alpha="0.8"
        android:elevation="16dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Regist_button"
        android:id="@+id/useless_text"
        android:orientation="horizontal">
      <TextView
          android:layout_width="40dp"
          android:layout_height="1dp"
          android:layout_marginTop="36dp"
          android:layout_marginLeft="36dp"
          android:layout_weight="1"
          android:background="@color/white"
          />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="或用一下方式登陆"
            android:textStyle="bold"
            android:textSize="12sp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="26dp" />
        <TextView
            android:layout_width="40dp"
            android:layout_height="1dp"
            android:layout_marginTop="36dp"
            android:layout_marginRight="36dp"
            android:layout_weight="1"
            android:background="@color/white"
            />
    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/useless_text"
         android:layout_marginLeft="36dp"
         android:layout_marginRight="36dp"
         android:layout_marginTop="36dp"
         android:layout_alignParentBottom="true">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1">
      <ImageView
          android:id="@+id/Icon_qq"
          android:background="@drawable/qq_icon"
          android:src="@mipmap/qq_icon"
          android:layout_width="46dp"
          android:layout_height="46dp"
          android:layout_centerHorizontal="true"/>
         </RelativeLayout>
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1">
         <ImageView
             android:id="@+id/icon_weixin"
             android:background="@drawable/qq_icon"
             android:src="@mipmap/weixin_icon"
             android:layout_width="46dp"
             android:layout_height="46dp"
             android:layout_centerHorizontal="true"/>
         </RelativeLayout>
     </LinearLayout>

</RelativeLayout>
